--- a/public/frontend/styles/konten.css
+++ b/public/frontend/styles/konten.css
@@ -5,15 +5,12 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-/* html,body{
+html,body{
   display: grid;
   height: 150%;
   place-items: center;
   background: white;
-} */
-
-
-/* detail event */
+}
 ::selection{
   background: rgba(23,162,184,0.3);
 }
@@ -219,24 +216,76 @@ margin-left: 20px;
 .box:hover .content .image img{
   border-color: #fff;
 }
-@media (max-width: 1045px) {
-  .wrapper .box {
-    width: calc(50% - 10px);
-    margin: 10px 0;
-  }
+.total-pembayaran {
+  border: 1px solid #ccc; /* Adjust color and width as needed */
+  padding: 5px 10px; /* Add padding for spacing */
+  text-align: left;    /* Align text to the right */
+}
+.detail-order-final p, .detail-order-final li { /* Target semua p dan li di dalam detail-order-final */
+  font-size: 10px; 
+  color: grey;
+}
+.payment-success-img {
+  margin:auto;
+  display:block;
+  font-weight: 700; 
+  text-align: center; 
+  margin-top: 10px;
+  font-size: 18px;
+}
+.payment-success-title {
+  font-size: 16px;
+  margin:auto;
+  display:block;
+  font-weight: 500; 
+  text-align: center; 
+  margin-top: 10px;
+}
+.payment-success-desc {
+  font-size: 12px;
+  margin:auto;
+  display:block;
+  font-weight: 300; 
+  text-align: center; 
+  margin-top: 10px;
+  color: grey;
 
-  .wrapper .box-pay {
-    width: 100%; /* Mengisi lebar maksimum saat berada di bawah 1045px */
-    margin-top: 20px; /* Atur margin top agar ada jarak antara box sebelumnya dan box-pay */
+}
+.btn .btn-secondary {
+  background-color: #F25D9C;
+  color: white;
+  border: 2px solid #F25D9C ;
+
+}
+
+@media (min-width: 992px) and (max-width: 1200px) { /* Tablet */
+  .bungkus .box-pay {
+    padding: 32px 24px 16px; /* Contoh: Sesuaikan padding untuk tablet */
+    margin-top: 100px; /* Contoh: Sesuaikan margin untuk tablet */
   }
 }
 
-@media (max-width: 702px) {
-  .wrapper .box {
-    width: 100%; /* Mengisi lebar maksimum saat lebar layar kurang dari 702px */
-  }
-
-  .wrapper .box-pay{
-    margin-bottom: 200px;
+@media (max-width: 767px) { /* Mobile */
+  .bungkus .box-pay {
+    padding: 48px 36px 24px;
+    margin-top: 100px;
   }
 }
+
+@media (max-width: 1200px) {
+  .bungkus .box-pay {
+    padding: 48px 36px 24px;
+    margin-top: 100px;
+  }
+}
+@media (min-width: 1200px) and (max-width: 992px) {
+  .bungkus .box-pay {
+    padding: 48px 36px 24px;
+    margin-top: 100px;
+  }
+}
+
+
+
+/* css faq */
+
