--- a/public/frontend/styles/home.css
+++ b/public/frontend/styles/home.css
@@ -320,4 +320,15 @@ margin-left: 20px;
         flex-direction: column-reverse;
         }
 }
-/*color : F25D9C
+
+
+/* css faq */
+
+.bungkus-faq{
+  margin-top: 50px;
+}
+.title-faq{
+  color: #F25D9C;
+  text-align: center;
+  font-size: 30px;
+}
